update api - add seeder - hooks & validation
