# api/controllers/CategoryController.js
@@ -2,6 +2,8 @@ const { category } = require("../models");
 
 class CategoryController {
   static async getAll(req, res) {
+    // #swagger.summary = 'get all category'
+
     try {
       let result = await category.findAll();
 
@@ -12,9 +14,15 @@ class CategoryController {
   }
 
   static async getById(req, res) {
+    // #swagger.summary = 'get category by ID'
+    const id = +req.params.id;
+
     try {
-      const id = +req.params.id;
       let result = await category.findByPk(id);
+
+      if (!result) {
+        return res.status(404).json({ message: `id ${id} tidak ditemukan` });
+      }
 
       res.json(result);
     } catch (error) {
@@ -23,19 +31,23 @@ class CategoryController {
   }
 
   static async create(req, res) {
+    // #swagger.summary = 'create new category'
+    let { name } = req.body;
+
     try {
-      let { name } = req.body;
       let result = await category.create({ name });
 
-      res.json({ message: "succesfully created", result });
+      res.status(201).json({ message: "succesfully created", result });
     } catch (error) {
       res.status(500).json(error);
     }
   }
 
   static async delete(req, res) {
+    // #swagger.summary = 'delete category by ID'
+    const id = +req.params.id;
+
     try {
-      const id = +req.params.id;
       let result = await category.destroy({ where: { id } });
 
       if (!result) {
@@ -49,16 +61,18 @@ class CategoryController {
   }
 
   static async edit(req, res) {
+    // #swagger.summary = 'update category by ID'
+    const id = +req.params.id;
+    const { name } = req.body;
+
     try {
-      const id = +req.params.id;
-      const { name } = req.body;
       let result = await category.update({ name }, { where: { id } });
 
-      if (!result) {
+      if (!result[0]) {
         return res.status(404).json({ message: `id ${id} tidak ditemukan` });
       }
 
-      res.json({ message: `id ${id} berhasil dirubah`, result });
+      res.json({ message: `id ${id} berhasil dirubah` });
     } catch (error) {
       res.status(500).json(error);
     }
